Fix Builder banner buttons get cut off in Firefox

--- a/src/assets/scss/deprecated/_deprecated.scss
+++ b/src/assets/scss/deprecated/_deprecated.scss
@@ -83,6 +83,7 @@
 
 		p {
 			color: $text-color;
+			margin-top: 1px;
 			padding: 0 1rem 1rem;
 		}
 
